<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home_dest">

    <fragment
        android:id="@+id/home_dest"
        android:name="codes.knightkun.kirin.presentation.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_projectDetail"
            app:destination="@id/project_detail_dest"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/projects_dest"
        android:name="codes.knightkun.kirin.presentation.projects.ProjectsFragment"
        android:label="@string/nav_projects"
        tools:layout="@layout/fragment_projects">
        <action
            android:id="@+id/action_projects_to_projectDetail"
            app:destination="@id/project_detail_dest"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/project_detail_dest"
        android:name="codes.knightkun.kirin.presentation.detail.ProjectDetailFragment"
        android:label="{projectId}"
        tools:layout="@layout/fragment_project_detail">
        <argument
            android:name="projectId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/blog_dest"
        android:name="codes.knightkun.kirin.presentation.blog.BlogFragment"
        android:label="@string/nav_blog"
        tools:layout="@layout/fragment_blog" />

    <fragment
        android:id="@+id/about_dest"
        android:name="codes.knightkun.kirin.presentation.about.AboutFragment"
        android:label="@string/nav_about"
        tools:layout="@layout/fragment_about" />

</navigation>
